// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity for recipes with components 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity for recipes without components 1`] = `
Object {
  "components": undefined,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an amount is set 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 2,
      "type": "Item",
      "usedQuantity": 2,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 10,
      "totalQuantity": 20,
      "type": "Currency",
      "usedQuantity": 20,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 5,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 5,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 5,
  "type": "Recipe",
  "usedQuantity": 5,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an recipe has a output > 0 3`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 25,
      "type": "Item",
      "usedQuantity": 25,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 5,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 25,
  "type": "Recipe",
  "usedQuantity": 25,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an sub-recipe has a output > 0 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 10,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 5,
      "prerequisites": Array [],
      "quantity": 7,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 2,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`calculateTreeQuantity (total quantity) calculates the correct quantity if an sub-recipe has a output > 0 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 10,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 5,
      "prerequisites": Array [],
      "quantity": 7,
      "totalQuantity": 15,
      "type": "Item",
      "usedQuantity": 15,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 2,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 4,
  "type": "Recipe",
  "usedQuantity": 4,
}
`;

exports[`calculateTreeQuantity (total quantity) does not modify the initial recipe tree 1`] = `
Object {
  "components": Array [
    Object {
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "type": "Item",
    },
    Object {
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "type": "Item",
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "type": "Recipe",
}
`;

exports[`calculateTreeQuantity (total quantity) does not modify the initial recipe tree 2`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (total quantity) rounds correctly if the output is percentage based 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 0.31,
      "prerequisites": Array [],
      "quantity": 77,
      "totalQuantity": 77,
      "type": "Item",
      "usedQuantity": 77,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (total quantity) works with a complex real recipe 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Item",
      "usedQuantity": 10,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 25,
          "totalQuantity": 50,
          "type": "Item",
          "usedQuantity": 50,
        },
        Object {
          "components": Array [
            Object {
              "components": undefined,
              "disciplines": Array [],
              "id": 1,
              "min_rating": null,
              "multipleRecipeCount": 1,
              "output": 1,
              "prerequisites": Array [],
              "quantity": 3,
              "totalQuantity": 60,
              "type": "Item",
              "usedQuantity": 60,
            },
          ],
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 1,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [
            Object {
              "id": 123,
              "type": "Recipe",
            },
          ],
          "quantity": 10,
          "totalQuantity": 20,
          "type": "Recipe",
          "usedQuantity": 20,
        },
        Object {
          "components": Array [
            Object {
              "components": undefined,
              "disciplines": Array [],
              "id": 1,
              "min_rating": null,
              "multipleRecipeCount": 1,
              "output": 1,
              "prerequisites": Array [],
              "quantity": 2,
              "totalQuantity": 16,
              "type": "Item",
              "usedQuantity": 16,
            },
          ],
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 1,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [
            Object {
              "id": 123,
              "type": "Recipe",
            },
          ],
          "quantity": 4,
          "totalQuantity": 8,
          "type": "Recipe",
          "usedQuantity": 8,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 5,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 5,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 10,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 2,
  "type": "Recipe",
  "usedQuantity": 2,
}
`;

exports[`calculateTreeQuantity (total quantity) works with a simple real recipe 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 1,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 25,
      "totalQuantity": 50,
      "type": "Item",
      "usedQuantity": 50,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 3,
          "totalQuantity": 60,
          "type": "Item",
          "usedQuantity": 60,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 10,
      "totalQuantity": 20,
      "type": "Recipe",
      "usedQuantity": 20,
    },
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 1,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 2,
          "totalQuantity": 16,
          "type": "Item",
          "usedQuantity": 16,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 4,
      "totalQuantity": 8,
      "type": "Recipe",
      "usedQuantity": 8,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 5,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 10,
  "type": "Recipe",
  "usedQuantity": 10,
}
`;

exports[`calculateTreeQuantity (used quantity) always crafts the root node even if it is available 1`] = `
Object {
  "components": undefined,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (used quantity) does only craft part of the items if the tree result if partially available 1`] = `
Object {
  "components": Array [
    Object {
      "components": Array [
        Object {
          "components": undefined,
          "disciplines": Array [],
          "id": 2,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 1,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 2,
        },
      ],
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 1,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 10,
      "type": "Recipe",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 0,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 10,
  "type": "Recipe",
  "usedQuantity": 10,
}
`;

exports[`calculateTreeQuantity (used quantity) doesn't use tree components if the tree result is available or not crafted 1`] = `
Object {
  "buyPrice": 1,
  "buyPriceEach": 1,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": undefined,
      "craft": false,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 5,
          "totalQuantity": 0,
          "type": "Item",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 3,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 5,
        },
      ],
      "craft": false,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 6,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": undefined,
          "craft": false,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [],
          "id": 4,
          "min_rating": null,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [],
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Item",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 5,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
  ],
  "craft": true,
  "craftDecisionPrice": 1,
  "craftResultPrice": 1,
  "decisionPrice": 1,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (used quantity) doesn't use tree sub-components if the tree result is not crafted or available 1`] = `
Object {
  "buyPrice": 1,
  "buyPriceEach": 1,
  "components": Array [
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "craftDecisionPrice": 1,
              "craftResultPrice": 1,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "multipleRecipeCount": 1,
              "output": 1,
              "prerequisites": Array [],
              "quantity": 5,
              "totalQuantity": 25,
              "type": "Item",
              "usedQuantity": 25,
            },
          ],
          "craft": true,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 3,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [
            Object {
              "id": 123,
              "type": "Recipe",
            },
          ],
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Recipe",
          "usedQuantity": 5,
        },
      ],
      "craft": false,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 2,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "craftDecisionPrice": 1,
              "craftResultPrice": 1,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "multipleRecipeCount": 1,
              "output": 1,
              "prerequisites": Array [],
              "quantity": 5,
              "totalQuantity": 0,
              "type": "Item",
              "usedQuantity": 0,
            },
          ],
          "craft": true,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 3,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [
            Object {
              "id": 123,
              "type": "Recipe",
            },
          ],
          "quantity": 5,
          "totalQuantity": 0,
          "type": "Recipe",
          "usedQuantity": 0,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 99,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 1,
      "buyPriceEach": 1,
      "components": Array [
        Object {
          "buyPrice": 1,
          "buyPriceEach": 1,
          "components": Array [
            Object {
              "buyPrice": 1,
              "buyPriceEach": 1,
              "components": undefined,
              "craft": false,
              "craftDecisionPrice": 1,
              "craftResultPrice": 1,
              "decisionPrice": 1,
              "disciplines": Array [],
              "id": 4,
              "min_rating": null,
              "multipleRecipeCount": 1,
              "output": 1,
              "prerequisites": Array [],
              "quantity": 5,
              "totalQuantity": 25,
              "type": "Item",
              "usedQuantity": 5,
            },
          ],
          "craft": true,
          "craftDecisionPrice": 1,
          "craftResultPrice": 1,
          "decisionPrice": 1,
          "disciplines": Array [
            "Armorsmith",
          ],
          "id": 6,
          "min_rating": 400,
          "multipleRecipeCount": 1,
          "output": 1,
          "prerequisites": Array [
            Object {
              "id": 123,
              "type": "Recipe",
            },
          ],
          "quantity": 5,
          "totalQuantity": 5,
          "type": "Recipe",
          "usedQuantity": 5,
        },
      ],
      "craft": true,
      "craftDecisionPrice": 1,
      "craftResultPrice": 1,
      "decisionPrice": 1,
      "disciplines": Array [
        "Armorsmith",
      ],
      "id": 5,
      "min_rating": 400,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [
        Object {
          "id": 123,
          "type": "Recipe",
        },
      ],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Recipe",
      "usedQuantity": 1,
    },
  ],
  "craft": true,
  "craftDecisionPrice": 1,
  "craftResultPrice": 1,
  "decisionPrice": 1,
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (used quantity) sets correct used quantity with available items 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 100,
      "totalQuantity": 100,
      "type": "Currency",
      "usedQuantity": 100,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 3,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 0,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;

exports[`calculateTreeQuantity (used quantity) sets correct used quantity without available items 1`] = `
Object {
  "components": Array [
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 2,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 1,
      "totalQuantity": 1,
      "type": "Item",
      "usedQuantity": 1,
    },
    Object {
      "components": undefined,
      "disciplines": Array [],
      "id": 3,
      "min_rating": null,
      "multipleRecipeCount": 1,
      "output": 1,
      "prerequisites": Array [],
      "quantity": 5,
      "totalQuantity": 5,
      "type": "Item",
      "usedQuantity": 5,
    },
  ],
  "disciplines": Array [
    "Armorsmith",
  ],
  "id": 1,
  "min_rating": 400,
  "multipleRecipeCount": 1,
  "output": 1,
  "prerequisites": Array [
    Object {
      "id": 123,
      "type": "Recipe",
    },
  ],
  "quantity": 1,
  "totalQuantity": 1,
  "type": "Recipe",
  "usedQuantity": 1,
}
`;
